[gd_scene load_steps=13 format=2]

[ext_resource path="res://Utilities/MobileControls.gd" type="Script" id=1]
[ext_resource path="res://Utilities/GameViewport.gd" type="Script" id=2]
[ext_resource path="res://PermittedAssets/Dpad.svg" type="Texture" id=3]
[ext_resource path="res://PermittedAssets/CircleZ.png" type="Texture" id=4]
[ext_resource path="res://PermittedAssets/CircleX.png" type="Texture" id=5]
[ext_resource path="res://PermittedAssets/CircleC.png" type="Texture" id=6]
[ext_resource path="res://PermittedAssets/CircleS.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 250, 250 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 250, 250 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 250, 250 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 250, 250 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 250, 250 )

[node name="MobileControls" type="Node"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_right = 4000.0
margin_bottom = 4000.0
color = Color( 0, 0, 0, 1 )

[node name="ViewportContainer" type="ViewportContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
stretch = true

[node name="GameViewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 40, 40 )
handle_input_locally = false
render_target_update_mode = 3
script = ExtResource( 2 )

[node name="D_Pad" type="Node2D" parent="."]
editor/display_folded = true
modulate = Color( 1, 1, 1, 0.588235 )

[node name="TextureRect" type="TextureRect" parent="D_Pad"]
margin_right = 1500.0
margin_bottom = 1500.0
texture = ExtResource( 3 )
expand = true

[node name="Up" type="TouchScreenButton" parent="D_Pad"]
position = Vector2( 750, 250 )
shape = SubResource( 1 )
shape_visible = false

[node name="Down" type="TouchScreenButton" parent="D_Pad"]
position = Vector2( 750, 1250 )
shape = SubResource( 1 )
shape_visible = false

[node name="Left" type="TouchScreenButton" parent="D_Pad"]
position = Vector2( 250, 750 )
shape = SubResource( 1 )
shape_visible = false

[node name="Right" type="TouchScreenButton" parent="D_Pad"]
position = Vector2( 1250, 750 )
shape = SubResource( 1 )
shape_visible = false

[node name="Buttons" type="Node2D" parent="."]
editor/display_folded = true
modulate = Color( 1, 1, 1, 0.588235 )

[node name="Z" type="TextureRect" parent="Buttons"]
margin_left = 500.0
margin_right = 1000.0
margin_bottom = 500.0
texture = ExtResource( 4 )
expand = true

[node name="TouchScreenButton" type="TouchScreenButton" parent="Buttons/Z"]
position = Vector2( 250, 250 )
shape = SubResource( 2 )
shape_centered = false
shape_visible = false

[node name="X" type="TextureRect" parent="Buttons"]
margin_left = 500.0
margin_top = 1000.0
margin_right = 1000.0
margin_bottom = 1500.0
texture = ExtResource( 5 )
expand = true

[node name="TouchScreenButton" type="TouchScreenButton" parent="Buttons/X"]
position = Vector2( 250, 250 )
shape = SubResource( 3 )
shape_centered = false
shape_visible = false

[node name="C" type="TextureRect" parent="Buttons"]
margin_top = 500.0
margin_right = 500.0
margin_bottom = 1000.0
texture = ExtResource( 6 )
expand = true

[node name="TouchScreenButton" type="TouchScreenButton" parent="Buttons/C"]
position = Vector2( 250, 250 )
shape = SubResource( 4 )
shape_centered = false
shape_visible = false

[node name="S" type="TextureRect" parent="Buttons"]
margin_left = 1000.0
margin_top = 500.0
margin_right = 1500.0
margin_bottom = 1000.0
texture = ExtResource( 7 )
expand = true

[node name="TouchScreenButton" type="TouchScreenButton" parent="Buttons/S"]
position = Vector2( 250, 250 )
shape = SubResource( 5 )
shape_centered = false
shape_visible = false
[connection signal="pressed" from="D_Pad/Up" to="." method="_on_Up_pressed"]
[connection signal="released" from="D_Pad/Up" to="." method="_on_Up_released"]
[connection signal="pressed" from="D_Pad/Down" to="." method="_on_Down_pressed"]
[connection signal="released" from="D_Pad/Down" to="." method="_on_Down_released"]
[connection signal="pressed" from="D_Pad/Left" to="." method="_on_Left_pressed"]
[connection signal="released" from="D_Pad/Left" to="." method="_on_Left_released"]
[connection signal="pressed" from="D_Pad/Right" to="." method="_on_Right_pressed"]
[connection signal="released" from="D_Pad/Right" to="." method="_on_Right_released"]
[connection signal="pressed" from="Buttons/Z/TouchScreenButton" to="." method="_on_Z_button_down"]
[connection signal="released" from="Buttons/Z/TouchScreenButton" to="." method="_on_Z_button_up"]
[connection signal="pressed" from="Buttons/X/TouchScreenButton" to="." method="_on_X_button_down"]
[connection signal="released" from="Buttons/X/TouchScreenButton" to="." method="_on_X_button_up"]
[connection signal="pressed" from="Buttons/C/TouchScreenButton" to="." method="_on_C_button_down"]
[connection signal="released" from="Buttons/C/TouchScreenButton" to="." method="_on_C_button_up"]
[connection signal="pressed" from="Buttons/S/TouchScreenButton" to="." method="_on_S_button_down"]
[connection signal="released" from="Buttons/S/TouchScreenButton" to="." method="_on_S_button_up"]
